# eliadeSim

AppsSim/: AppsActionInitialization.cc  AppsActionInitialization.hh  AppsAnalysisManager.cc  AppsAnalysisManager.hh  AppsAnalysisObject.cc  AppsDetectorConstruction.cc  AppsDigitizer.cc  AppsEventAction.cc  AppsEventAction.hh  AppsInput.cc  AppsPrimaryGeneratorAction.cc  AppsPrimaryGeneratorAction.hh  AppsRun.cc  AppsRun.hh  AppsRunAction.cc  AppsSD.cc  AppsSteppingAction.cc  CMakeLists.txt  CeBrDetector.cc  CloverDetector.cc  CloverDetector.hh  G4Elastic.hh  G4PhotoElastic.cc  GammaGenerator.hh  History  NRFCrossSectionDataStore.cc  NRFInteractions.hh  NeutronHPphysics.cc  NeutronHPphysics.hh  README.md  ScintDetector.hh  exampleApps.cc  exampleApps.in  run1.mac  run2.mac  vegaCollimator.hh  vis.mac
AppsSim-build/: InputObjects.txt  SimParameters.txt
AppsSim/include/: AppsAnalysisObject.hh  AppsDetectorConstruction.hh  AppsDigitizer.hh  AppsGeometryObject.hh  AppsHit.hh  AppsInput.hh  AppsPhysicsList.hh  AppsPrimaryGeneratorAction.hh  AppsRunAction.hh  AppsSD.hh  AppsSteppingAction.hh  CeBrDetector.hh  DiagDetector.hh  G4PhotoElastic.hh  NRFCrossSectionData.hh  NRFCrossSectionDataStore.hh
AppsSim/src/: AppsActionInitialization.cc  AppsAnalysisObject.cc  AppsDetectorConstruction.cc  AppsDigitizer.cc  AppsGeometryObject.cc  AppsHit.cc  AppsInput.cc  AppsPhysicsList.cc  AppsPrimaryGeneratorAction.cc  AppsRun.cc  AppsRunAction.cc  CloverDetector.cc  DiagDetector.cc  G4Elastic.cc  GammaGenerator.cc  NRFCrossSectionData.cc  NRFInteractions.cc  NeutronHPphysics.cc  READMe  ScintDetector.cc  vegaCollimator.cc
